@@ -25,6 +25,7 @@ CHANGES IN FLTK 1.1.0b5
 	  not quoted...)
 	- FLTK should now compile with Cygwin cleanly.
 	- Shortcut changes were not being saved by FLUID.
+	- FLUID didn't write the deimage() static data.
 
 
 CHANGES IN FLTK 1.1.0b4
